View Issue Details

IDProjectCategoryView StatusLast Update
0023863Open CASCADEOCCT:Modeling Datapublic2013-12-19 13:58
ReporteremvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.7.0Fixed in Version6.7.0 
Summary0023863: Wrong distance value between circle and cylinder
DescriptionWrong distance value between circle and cylinder.
Steps To Reproducepcylinder b1 10 10
explode b1 f
copy b1_1 b1
circle b2 0 10 10 1 0 0 5
mkedge b2 b2
don b1 b2
distmini d b1 b2
#the result should be point (0 10 5)
TagsNo tags attached.
Test case numberbugs moddata_3(013) bug23863

Activities

azv

2013-09-18 09:34

administrator   ~0025620

Branch CR23863.
The verification of intersection of a circle and a cylinder was added to the extrema calculation. The intersection points were added to the list of suspicious of the extrema.

ifv

2013-09-19 17:52

developer   ~0025662

Ok

mkv

2013-09-26 08:31

tester   ~0025736

Dear BugMaster,

Branch CR23863 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 5ea9e416035515057c851a026b044ec005f8045b

Number of compiler warnings:

occt component :
Linux: 506 (506 on master)
Windows: 31 (31 on master)

products component :
Linux: 190 (190 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
http://occt-tests/CR23863-1-master-occt/Debian60-64/bugs/moddata_3/bug23863.html
http://occt-tests/CR23863-1-master-occt/Windows-32-VC9/bugs/moddata_3/bug23863.html
bugs moddata_3(013) bug23863: OK

Testing on Linux:
Total MEMORY difference: 364883920 / 366214652
Total CPU difference: 42274.75000000119 / 42280.380000000965

Testing on Windows:
Total MEMORY difference: 430414564 / 428995200
Total CPU difference: 30566.03125 / 48287.796875

There are not differences in images found by testdiff.

Related Changesets

occt: master 19875353

2013-09-26 16:13:17

azv


Committer: bugmaster Details Diff
0023863: Wrong distance value between circle and cylinder

The verification of intersection of a circle and a cylinder was added to the calculation of extrema
Test cases for issue CR23863
Affected Issues
0023863
mod - src/Extrema/Extrema_ExtElCS.cxx Diff File
add - tests/bugs/moddata_3/bug23863 Diff File

Issue History

Date Modified Username Field Change
2013-03-27 12:55 emv New Issue
2013-03-27 12:55 emv Assigned To => emv
2013-03-27 14:14 emv Steps to Reproduce Updated
2013-09-10 09:17 emv Assigned To emv => ifv
2013-09-10 17:57 ifv Assigned To ifv => azv
2013-09-12 10:25 ifv Status new => assigned
2013-09-18 09:34 azv Note Added: 0025620
2013-09-18 09:34 azv Assigned To azv => ifv
2013-09-18 09:34 azv Status assigned => resolved
2013-09-19 17:52 ifv Note Added: 0025662
2013-09-19 17:52 ifv Status resolved => reviewed
2013-09-20 08:58 mkv Assigned To ifv => mkv
2013-09-26 08:31 mkv Note Added: 0025736
2013-09-26 08:31 mkv Test case number => bugs moddata_3(013) bug23863
2013-09-26 08:31 mkv Assigned To mkv => bugmaster
2013-09-26 08:31 mkv Status reviewed => tested
2013-09-26 14:13 bugmaster Target Version => 6.7.0
2013-09-30 15:53 bugmaster Changeset attached => occt master 19875353
2013-09-30 15:53 bugmaster Status tested => verified
2013-09-30 15:53 bugmaster Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:58 bugmaster Fixed in Version => 6.7.0