0023863: Wrong distance value between circle and cylinder

The verification of intersection of a circle and a cylinder was added to the calculation of extrema
Test cases for issue CR23863